Criando rota de pesquisa de cardápio e refatorando o codigo do back end
